# serializer version: 1
# name: test_sing_file
  'SingleInstancePerFileAttribute subclasses need at least one argument in the constructor.'
# ---
# name: test_sing_file.1
  "Argument 0 is not a string but of type <class 'int'>."
# ---
